[package]
name = "pic-transfer"
version = "0.1.0"
authors = ["Joseph Nusairat <joseph@nusairat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"

kamadak-exif = "0.5.2"

regex = "1"

lazy_static = "1.4.0"

async-std = "1.6.5"
